<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:background="#3771E5"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/app_name"
            android:textColor="#FFF8F8"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3771E5"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <Button
            android:id="@+id/buttonFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFEFE"
            android:fontFamily="sans-serif"
            android:text="@string/button_find"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#1A1B22"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="14dp"
            app:iconTint="#1A1B22" />

        <Button
            android:id="@+id/buttonMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFEFE"
            android:fontFamily="sans-serif"
            android:text="@string/button_media"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#1A1B22"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="14dp"
            app:iconTint="#1A1B22" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFEFE"
            android:fontFamily="sans-serif"
            android:text="@string/button_setup"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#1A1B22"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/setup"
            app:iconGravity="textStart"
            app:iconPadding="14dp"
            app:iconTint="#1A1B22" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>